# ai-agentique-labs

./: .gitignore  README.md  lab1.ipynb  main.py  pyproject.toml
evaluation/: README.md  evaluation.ipynb  generate_graph.py  graph.py  ingest.py  main.py  questions.py  rapport.md  run_evaluation.py  tools.py
evaluation/documents/: agadir.txt  casablanca.txt  chefchaouen.txt  fes.txt  marrakech.txt
lab2/: 01_agents_demo.py  README.md  chef_personnel_agent.py
lab3/: README.md  part1_rag_pdf.py  part2_sql_agent.py
lab4/: README.md  agentMCP.py  agentMCPDistant.py  agentMCPTime.py
lab5/: README.md  agent_simple.py  langgraph.json  multi_agents.py
lab6/: README.md  agent_context.py  agent_state.py
lab7/: README.md  agent_hitl.py
